--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello World</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.scss">
+    
 </head>
 <body>
     <a class="neu-line" href=""><span class="image"></span></a>
