--- a/index.html
+++ b/index.html
@@ -1,62 +1,29 @@
+
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World</title>
-    <link rel="stylesheet" href="styles.scss">
-    
-</head>
-<body>
-    <a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-<a class="neu-line" href=""><span class="image"></span></a>
-</body>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
+  </head>
+  <body>
+    <div class="middle">
+      <a class="btn" href="#">
+        <i class="fab fa-facebook-f"></i>
+      </a>
+      <a class="btn" href="#">
+        <i class="fab fa-twitter"></i>
+      </a>
+      <a class="btn" href="#">
+        <i class="fab fa-google"></i>
+      </a>
+      <a class="btn" href="#">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a class="btn" href="#">
+        <i class="fab fa-youtube"></i>
+      </a>
+    </div>
+  </body>
 </html>
