--- a/index.html
+++ b/index.html
@@ -2,37 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Future Engineer</title>
     <link rel="stylesheet" href="style.css">
+    <title>CV Willy</title>
 </head>
 <body>
-
-    <div class="container">
-        <div class="header">
-            <h1 class="judul">My Website</h1>
-            <ul>
-                <li type="none"><a href="">home</a></li>
-                <li type="none"><a href="">about</a></li>
-                <li type="none"><a href="">product</a></li>
-                <li type="none"><a href="">services</a></li>
-                <li type="none"><a href="">contact</a></li>
-            </ul>
-        </div>
-        <div class="hero"></div>
-        <div class="content">
-            <h1>Judul Artikel</h1>
-            <p class="penulis">ditulis oleh <a href="#">willy</a>. pada 1 januari 2020</p>
-
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab aut culpa nulla. Rem soluta est aspernatur. Suscipit, necessitatibus provident consequatur molestias aliquam labore nulla perferendis repellendus, voluptas dolores omnis iste?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure nam in saepe amet totam voluptates sunt eligendi consequatur dolorum repudiandae quo vitae maiores id cupiditate, quidem laudantium similique, ex nemo temporibus consectetur, officia vel quos aliquid ipsum. Ea ex non, inventore culpa ab voluptates odit fugit explicabo recusandae eos tempore nihil corporis harum ut repellat dolores voluptatibus atque repellendus accusamus, pariatur tempora. Aut rem itaque laboriosam inventore, vel fugiat assumenda at nihil aperiam dolore, quos a aliquid sed minima deserunt magni quo. Adipisci vitae est quibusdam. Non, quaerat maxime maiores blanditiis ipsum fugit veniam eos libero enim error quis ipsam.</p>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. At dolorum tempore vitae maiores ut tenetur ratione. Aut et minima esse vel dolor molestiae! Alias quos quo, quasi quas numquam consectetur nostrum dicta? Eius blanditiis libero doloribus nam illum nobis corrupti, recusandae non dicta obcaecati tenetur consectetur, consequatur laboriosam numquam. Sequi molestias sed consequatur possimus saepe dolores sint natus soluta reprehenderit consequuntur explicabo perspiciatis similique necessitatibus iste, repudiandae cumque atque, illo nobis debitis voluptas maiores. Quod a repudiandae blanditiis illo ratione!</p>
-
-        </div>
-        <div class="footer">
-            <p class="copy">Copyright 2020. Willy</p>
+    <div class="header">
+        <h1>Curriculum Vitae</h1>
+    </div>
+    <div class="content">
+        <div class="cv">
+            <img src="/gambar/CVWilly.jpg" alt="">
         </div>
     </div>
-    
+    <div class="footer">
+
+    </div>
 </body>
 </html>
