--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
     <div class="content">
         <div class="cv">
-            <img src="/gambar/CVWilly.jpg" alt="">
+            <img src="/gambar/CV.jpg" alt="">
         </div>
     </div>
     <div class="footer">
