--- a/index.html
+++ b/index.html
@@ -8,16 +8,72 @@
     <title>CV Willy</title>
 </head>
 <body>
-    <div class="header">
-        <h1>Curriculum Vitae</h1>
-    </div>
-    <div class="content">
-        <div class="cv">
-            <img src="/gambar/CV.jpg" alt="">
+    <div class="cv">
+        <div class="photo">
+
+        </div>
+        
+        <div class="aboutme">
+            <h3 class="judul1">Willy Murtadho Supit, S.T.</h3>
+            <h4>+62 xxx xxx xxxx | wmurtadho@gmail.com</h4>
+            <h4>I am a fresh graduate of Computer Engineering with a Bachelor's degree
+                from Telkom University, I have a focus on Server Virtualization, the latest
+                technology in Servers, and also explore python programming and besides
+                that I have the desire to continue learning to be able to become a
+                competent person in their field, I am able to work alone or working in a                   
+                team. I'm interested in Devops.</h4>
+        </div>
+
+        <div class="education">
+            <h3 class=judul1>Education</h3>
+            <h4>Computer Engineering – Telkom University</h4>
+        </div>
+
+        <div class="worke">
+            <h3 class="judul1">Work Experience</h3>
+            <h3>Front-End Developer – CV. Teknologi Kreatif Indonesia, Intern</h3>
+            <h3>May 2019 – July 2019</h3>
+                <ul>
+                    <li>Learn to make a website look like 9gag, 1cak using HTML and CSS</li>
+                </ul>
+        </div>
+
+        <div class="orga">
+            <h3 class="judul1">Organizational Activitie</h3>
+            <h3>Laboratory Assistant – Evconn Laboratory, Computer Engineering</h3>
+            <ul>
+                <li>Teaching computer and data network practicum for 1 semester</li>
+                <li>Teach study groups about routers and servers</li>
+            </ul>
+        </div>
+
+        <div class="abi">
+            <h3 class="judul1">Ability & Competence</h3>
+            <ul>
+                <li>Ubuntu & Debian Server (Managing Files, Managing User & Group, FTP, DHCP, NFS, Apache)</li>
+                <li>Python<i>
+                <li>VMware/VirtualBox</li>
+                <li>Microsoft Office (Word, PowerPoint)</li>
+                <li>Windows/ Linux OS</li>              
+            </ul>
+        </div>
+
+        <div class="project">
+            <h3 class="judul1">Project</h3>
+            <ul>
+                <li>Band Name Generator  </li>
+                A program that generate band names using their city and pet name
+                <li>Tip Calculator</li>
+                A program that determines who has to pay for the meal, at a percentage determined by the restaurant
+                <li>Treasure Island</li>
+                A program that has a mission to find a treasure with various options to the treasure
+                <li>Rock Paper Scissors</li>
+                A program in the form of a rock paper scissors game, which is played by the player and the
+computer
+            </ul>
         </div>
     </div>
-    <div class="footer">
 
-    </div>
+    
 </body>
 </html>
