--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         
         <div class="aboutme">
             <h3 class="judul1">Willy Murtadho Supit, S.T.</h3>
-            <h4>+62 xxx xxx xxxx | wmurtadho@gmail.com</h4>
+            <a href="https://www.linkedin.com/in/willy-murtadho-supit-b7bb90204/">Linkedin</a>
             <h4>I am a fresh graduate of Computer Engineering with a Bachelor's degree
                 from Telkom University, I have a focus on Server Virtualization, the latest
                 technology in Servers, and also explore python programming and besides
